style : fix height covering of background linear gradient

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,4 @@
 .app{
-    height: 100vh;
+    height: 100%;
     background-image: linear-gradient(to top, #d2691e99, #f7e2d3e7);
 }
